--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -92,7 +92,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdvLib, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -1644,8 +1644,8 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)Resources\InsertIcons.exe" "$(TargetPath)" "$(ProjectDir)img\lc_logo.ico";"$(ProjectDir)img\aav_file.ico";"$(ProjectDir)img\adv_file.ico";"$(ProjectDir)img\spectra_logo.ico"
-xcopy "$(ProjectDir)WindowsFiles\$(ConfigurationName)" "$(TargetDir)" /Y
+    <PostBuildEvent>xcopy "$(ProjectDir)WindowsFiles\$(ConfigurationName)" "$(TargetDir)" /Y
+"$(SolutionDir)Resources\InsertIcons.exe" "$(TargetPath)" "$(ProjectDir)img\lc_logo.ico";"$(ProjectDir)img\aav_file.ico";"$(ProjectDir)img\adv_file.ico";"$(ProjectDir)img\spectra_logo.ico"
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
